force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/RevRecOpportunityLineItemSchedule__c.object-meta.xml
<CustomObject>
    <description>RevRec OpportunityLineItemSchedule</description>
    <label>RevRecOpportunityLineItemSchedule</label>
    <nameField>
        <label>RevRecOpportunityLineItemSchedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecOpportunityLineItemSchedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>