force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Categories_List__c.field-meta.xml
<CustomField>
    <fullName>Categories_List__c</fullName>
    <label>Categories List</label>
    <type>TextArea</type>
</CustomField>