force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Converted_Deferred_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Deferred_Amount__c</fullName>
    <label>Converted Deferred Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>