force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Converted_LineItem_AmountTotal_c__c.field-meta.xml
<CustomField>
    <fullName>Converted_LineItem_AmountTotal_c__c</fullName>
    <label>Converted LineItem Amount Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>