force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Converted_Recognized_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Recognized_Total_Amount__c</fullName>
    <label>Converted Recognized Total Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>