force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Cor_Def_Rev__c.field-meta.xml
<CustomField>
    <fullName>Cor_Def_Rev__c</fullName>
    <label>Corporate Deferred Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>