force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Cor_LI_Amt_Total__c.field-meta.xml
<CustomField>
    <fullName>Cor_LI_Amt_Total__c</fullName>
    <label>Corporate LineItem Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>