force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Cor_LI_Amt_Total_Wei__c.field-meta.xml
<CustomField>
    <fullName>Cor_LI_Amt_Total_Wei__c</fullName>
    <label>Corporate LineItem AmountTotal(Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>