force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Cor_Rec_Total_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Cor_Rec_Total_Amt_Wei__c</fullName>
    <label>CorporateRecognizedTotalAmount(Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>