force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Corp_Def_Rev_Wei__c.field-meta.xml
<CustomField>
    <fullName>Corp_Def_Rev_Wei__c</fullName>
    <label>Corporate Deferred Revenue (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>