force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/DefReWei__c.field-meta.xml
<CustomField>
    <fullName>DefReWei__c</fullName>
    <label>Deferred Revenue (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>