force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/External_OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>External_OpportunityLineItemId__c</fullName>
    <externalId>true</externalId>
    <label>External OpportunityLineItemId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>