force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/ForecastedRev__c.field-meta.xml
<CustomField>
    <fullName>ForecastedRev__c</fullName>
    <label>Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>