force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/LI_Amt_Total_Wei__c.field-meta.xml
<CustomField>
    <fullName>LI_Amt_Total_Wei__c</fullName>
    <label>LineItemAmountTotal (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>