force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/LineItemAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>LineItemAmountTotal__c</fullName>
    <label>LineItemAmountTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>