force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/OriginalDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalDate__c</fullName>
    <label>Original Date</label>
    <type>Date</type>
</CustomField>