force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Rec_Total_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Rec_Total_Amt_Wei__c</fullName>
    <label>Recognized Total Amount (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>