force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/RecMonth__c.field-meta.xml
<CustomField>
    <fullName>RecMonth__c</fullName>
    <formula>MONTH(Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month for Recognize Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>