force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/Recognized_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Quantity__c</fullName>
    <label>Recognized Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>