force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/RecQuarter__c.field-meta.xml
<CustomField>
    <fullName>RecQuarter__c</fullName>
    <formula>CASE(MONTH( Date__c ), 1,1, 2,1, 3,1, 4,2, 5,2, 6,2, 7,3, 8,3, 9,3, 10,4, 11,4, 12,4,  98)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter for Recognize Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>