force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/RecYear__c.field-meta.xml
<CustomField>
    <fullName>RecYear__c</fullName>
    <formula>TEXT(YEAR(  Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year for Recognize Date</label>
    <type>Text</type>
</CustomField>