force-app/main/default/objects/RevRecOpportunityLineItemSchedule__c/fields/RevRecOpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>RevRecOpportunityLineItem__c</fullName>
    <label>RevRecOpportunityLineItem</label>
    <referenceTo>RevRecOpportunityLineItem__c</referenceTo>
    <relationshipLabel>RevRecOpportunityLineItemSchedules</relationshipLabel>
    <relationshipName>RevRecOpportunityLineItemSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>